[project]
name = "comfyui-danbooru-to-wd"
description = "Converts danbooru tags to a format suitable for Waifu Diffusion(or Danbooru based models)."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = ""

[tool.comfy]
PublisherId = "redrayz"
DisplayName = "ComfyUI-Danbooru-To-WD"
Icon = ""
