[project]
name = "comfyui-danbooru-to-wd"
description = "Converts danbooru tags to a format suitable for Waifu Diffusion(or Danbooru based models)."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies  = []

[project.urls]
Repository = "https://github.com/RedRayz/ComfyUI-Danbooru-To-WD"

[tool.comfy]
PublisherId = "redrayz"
DisplayName = "ComfyUI-Danbooru-To-WD"
Icon = ""
